k8s/reserver/templates/ingress copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reserver
spec:
  tls:
    - hosts:
      - alhassank8s.com
    - secretName: my-ingress-tls
  rules:
    - host: alhassank8s.com
    - http:
        paths:
          - path: /reservations/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: reservations
                port:
                  number: 3004
          - path: /auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 3003
